# rust-nn

./: Cargo.toml  LICENSE  README.md
src/: config.rs  layer.rs  lib.rs  logger.rs  network.rs  neuron.rs
src/activation/: activation_impl.rs  gaussian.rs  heaviside.rs  linear.rs  mod.rs  multiquadratics.rs  relu.rs  sigmoid.rs  tanh.rs  utils.rs
src/initialization/: initialization_impl.rs  mod.rs  uniform_distribution.rs  utils.rs  zero_centered.rs
src/loss/: binary_crossentropy.rs  crossentropy.rs  loss_impl.rs  mod.rs  mse.rs  utils.rs
tests/: test_activation.rs  test_layer.rs  test_loss.rs  test_network.rs  test_neuron.rs
