[package]
name = "rust-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
itertools = "0.14.0"
rand = "0.8.5"
rand_chacha = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[dev-dependencies]
rand_chacha = "0.3"

[lib]
name = "rust_nn"
path = "src/lib.rs"
